--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,19 @@
 # Done to increase the memory available to gradle.
-	org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop/
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.3
-	loader_version=0.14.4
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.3
+loader_version=0.14.4
 
 # Mod Properties
-	mod_version = 1.0.8
-	maven_group = com.github.alexnijjar.the_extractinator
-	archives_base_name = TheExtractinator
+mod_version = 1.0.8
+maven_group = com.github.alexnijjar.the_extractinator
+archives_base_name = TheExtractinator
 
 # Dependencies
-	modmenu_version=3.1.1
-	cloth_config_version=6.2.57
-	rei_version=8.1.449
+fabric_version=0.51.1+1.18.2
+modmenu_version=3.1.1
+cloth_config_version=6.2.57
+rei_version=8.1.449
