--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 org.gradle.jvmargs=-Xmx4G
 
-# Dependencies
 minecraft_version=1.18.2
-archives_base_name=The-Extractinator
+archives_base_name=Extractinator
+mod_id=extractinator
 mod_version=2.0.0
 maven_group=dev.alexnijjar
+
 fabric_loader_version=0.14.10
 fabric_api_version=0.66.0+1.18.2
 forge_version=1.18.2-40.1.85
