--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,34 +1,24 @@
+architectury {
+    common(rootProject.enabled_platforms.split(","))
+}
+
 dependencies {
-    // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
-    // Do NOT use other classes from fabric loader
-    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
 
-    modApi "com.teamresourceful.resourcefullib:resourcefullib-common-$rootProject.resourcefullib_version"
-    modApi "com.teamresourceful.resourcefulconfig:resourcefulconfig-common-$rootProject.resourcefulconfig_version"
-
+    modCompileOnly "mezz.jei:jei-1.19.3-common-api:$rootProject.jei_version"
+    modRuntimeOnly "mezz.jei:jei-1.19.3-common:$rootProject.jei_version"
 //    modCompileOnly "mezz.jei:jei-$rootProject.minecraft_version-common-api:$rootProject.jei_version"
 //    modRuntimeOnly "mezz.jei:jei-$rootProject.minecraft_version-common:$rootProject.jei_version"
-    modCompileOnly "mezz.jei:jei-1.19.2-common-api:$rootProject.jei_version"
-    modRuntimeOnly "mezz.jei:jei-1.19.2-common:$rootProject.jei_version"
-
     modCompileOnly "me.shedaniel:RoughlyEnoughItems-api:$rootProject.rei_version"
     modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin:$rootProject.rei_version"
+
+    modApi "com.teamresourceful.resourcefullib:resourcefullib-common-$rootProject.minecraft_version:$rootProject.resourcefullib_version"
+    modApi "com.teamresourceful.resourcefulconfig:resourcefulconfig-common-$rootProject.minecraft_version:$rootProject.resourcefulconfig_version"
 }
 
-architectury {
-    common()
-}
-
-publishing {
-    publications {
-        mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-    }
+processResources {
+    inputs.property "version", rootProject.version
+    inputs.property "github_name", rootProject.github_name
+    inputs.property "resourcefullib_version", rootProject.resourcefullib_version
+    inputs.property "resourcefulconfig_version", rootProject.resourcefulconfig_version
 }
