--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,50 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.0-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.1-SNAPSHOT" apply false
+
+    id "com.modrinth.minotaur" version "2.+"
+    id "com.matthewprenger.cursegradle" version "1.4.0" // literally never gonna update
 }
 
 architectury {
     minecraft = rootProject.minecraft_version
 }
 
+allprojects {
+    apply plugin: "java"
+    apply plugin: "architectury-plugin"
+
+    archivesBaseName = rootProject.archives_base_name
+    version = rootProject.mod_version
+    group = rootProject.maven_group
+
+    repositories {
+        maven {
+            url "https://cursemaven.com"
+            content {
+                includeGroup "curse.maven"
+            }
+        }
+        maven { url = "https://maven.resourcefulbees.com/repository/maven-public/"}
+    }
+
+    tasks.withType(JavaCompile).tap {
+        configureEach {
+            options.encoding = "UTF-8"
+            options.release = 17
+        }
+    }
+
+    java {
+        withSourcesJar()
+    }
+}
+
 subprojects {
     apply plugin: "dev.architectury.loom"
+    apply plugin: "com.modrinth.minotaur"
+    apply plugin: "com.matthewprenger.cursegradle"
+    apply plugin: "maven-publish"
 
     loom {
         silentMojangMappingsLicense()
@@ -18,33 +54,72 @@ subprojects {
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
         mappings loom.layered() {
             officialMojangMappings()
-            parchment("org.parchmentmc.data:parchment-$rootProject.minecraft_version:$rootProject.parchment_version@zip")
+//            parchment("org.parchmentmc.data:parchment-$rootProject.minecraft_version:$rootProject.parchment_version@zip")
         }
     }
-}
 
-allprojects {
-    apply plugin: "java"
-    apply plugin: "architectury-plugin"
-    apply plugin: "maven-publish"
+    var env = System.getenv()
+    var modLoader = name
 
-    archivesBaseName = rootProject.archives_base_name
-    version = rootProject.mod_version
-    group = rootProject.maven_group
+    var changelogFile = rootProject.file("changelog.txt")
+    var changelogText = changelogFile.exists() ? changelogFile.text : ""
 
-    repositories {
-        maven { url "https://maven.shedaniel.me/" }
-        maven { url "https://maven.terraformersmc.com" }
-        maven { url 'https://maven.blamejared.com' }
-        maven { url "https://nexus.resourcefulbees.com/repository/maven-public/" }
+    if (env.MODRINTH_TOKEN) {
+        modrinth {
+            projectId = modrinth_id
+            uploadFile = tasks.remapJar
+            gameVersions = [minecraft_version]
+            loaders = [modLoader]
+            changelog = changelogText
+
+            if (modLoader == "fabric") {
+                dependencies {
+                    required.project "fabric-api"
+                    required.project "resourceful-lib"
+                    required.project "resourceful-config"
+                    optional.project "modmenu"
+                    optional.project "rei"
+                }
+            } else {
+                dependencies {
+                    required.project "resourceful-lib"
+                    required.project "resourceful-config"
+                    optional.project "rei"
+                }
+            }
+        }
     }
 
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-        options.release = 17
-    }
+    if (env.CURSE_TOKEN) {
+        curseforge {
+            apiKey = env.CURSE_TOKEN
+            project {
+                id = curse_id
+                changelog = changelogText
+                releaseType = 'release'
+                addGameVersion minecraft_version
+                addGameVersion modLoader.capitalize()
 
-    java {
-        withSourcesJar()
+                mainArtifact(tasks.remapJar)
+
+                if (modLoader == "fabric") {
+                    relations {
+                        requiredDependency "fabric-api"
+                        requiredDependency "resourceful-lib"
+                        requiredDependency "resourceful-config"
+                        optionalDependency "modmenu"
+                        optionalDependency "jei"
+                        optionalDependency "roughly-enough-items"
+                    }
+                } else {
+                    relations {
+                        requiredDependency "resourceful-lib"
+                        requiredDependency "resourceful-config"
+                        optionalDependency "jei"
+                        optionalDependency "roughly-enough-items"
+                    }
+                }
+            }
+        }
     }
 }
