--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,25 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx3G
 
-minecraft_version=1.19.3
+minecraft_version=1.19.4
+enabled_platforms=fabric,forge
+
 archives_base_name=Extractinator
 mod_id=extractinator
-mod_version=2.0.2
+github_name=Extractinator
+mod_version=2.1.0
 maven_group=dev.alexnijjar
+modrinth_id=2EPioYNN
+curse_id=567114
 
-fabric_loader_version=0.14.12
-fabric_api_version=0.70.0+1.19.3
-forge_version=1.19.3-44.0.48
-parchment_version=2022.12.18
+fabric_loader_version=0.14.18
+fabric_api_version=0.76.0
+forge_version=45.0.25
+parchment_version=2023.03.12
 
-modmenu_version=5.0.2
-jei_version=11.5.0.297
-rei_version=10.0.581
-architectury_version=7.0.66
-emi_version=0.5.3+1.19.3
+modmenu_version=6.1.0-rc.4
+jei_version=12.4.0.22
+rei_version=11.0.597
+emi_version=0.7.2
 
-resourcefullib_version=1.19.3:1.2.0
-resourcefulconfig_version=1.19.3:1.1.1
+resourcefullib_version=1.3.1
+resourcefulconfig_version=1.2.0
