--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 
-minecraft_version=1.19.4
+minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=Extractinator
@@ -11,15 +11,16 @@ maven_group=dev.alexnijjar
 modrinth_id=2EPioYNN
 curse_id=567114
 
-fabric_loader_version=0.14.18
-fabric_api_version=0.76.0
-forge_version=45.0.25
-parchment_version=2023.03.12
+fabric_loader_version=0.14.11
+fabric_api_version=0.68.0
+forge_version=43.1.52
+parchment_version=2022.11.27
 
-modmenu_version=6.1.0-rc.4
-jei_version=12.4.0.22
-rei_version=11.0.597
+modmenu_version=4.1.2
+jei_version=11.6.0.1015
+rei_version=9.1.595
+architectury_version=6.5.82
 emi_version=0.7.2
 
-resourcefullib_version=1.3.1
-resourcefulconfig_version=1.2.0
+resourcefullib_version=1.1.19
+resourcefulconfig_version=1.0.20
