--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[45,)"
+loaderVersion = "[46,)"
 license = "MIT"
 issueTrackerURL = "https://github.com/AlexNijjar/${github_name}/issues"
 
@@ -9,21 +9,21 @@ version = "${version}"
 displayName = "Extractinator"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/extractinator"
 logoFile = "icon.png"
-authors = "Alex Nijjar, Kekie6"
-credits = ""
+authors = "Alex Nijjar"
+credits = "Kekie6"
 description = "Convert blocks into resources."
 
 [[dependencies.extractinator]]
 modId = "forge"
 mandatory = true
-versionRange = "[45,)"
+versionRange = "[46,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.extractinator]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19,)"
+versionRange = "[1.20,)"
 ordering = "NONE"
 side = "BOTH"
 
