--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,15 @@
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.20
-enabled_platforms=fabric,forge
+enabledPlatforms=fabric,forge
 
-archives_base_name=Extractinator
-mod_id=extractinator
-github_name=Extractinator
-mod_version=2.2.0
-maven_group=dev.alexnijjar.extractinator
-modrinth_id=2EPioYNN
-curse_id=567114
+version=2.3.0
+group=dev.alexnijjar.extractinator
 
-fabric_loader_version=0.14.21
-fabric_api_version=0.83.0
-forge_version=46.0.12
-parchment_version=2023.03.12
+minecraftVersion=1.20.1
+parchmentVersion=2023.09.03
 
-modmenu_version=7.0.1
-jei_version=14.0.0.4
-rei_version=12.0.622
+resourcefulLibVersion=2.1.16
+resourcefulConfigVersion=2.1.0
 
-resourcefullib_version=2.0.6
-resourcefulconfig_version=2.0.0
+reiVersion=12.0.652
+jeiVersion=15.2.0.27
