Use tech.alexnijjar instead of dev.alexnijjar

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 enabledPlatforms=fabric,forge
 
 version=2.3.0
-group=dev.alexnijjar.extractinator
+group=tech.alexnijjar.extractinator
 
 minecraftVersion=1.20.1
 parchmentVersion=2023.09.03
