--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,14 @@
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.19.4
-enabled_platforms=fabric,forge
+enabledPlatforms=fabric,forge
 
-archives_base_name=Extractinator
-mod_id=extractinator
-github_name=Extractinator
-mod_version=2.1.0
-maven_group=dev.alexnijjar
-modrinth_id=2EPioYNN
-curse_id=567114
+version=2.1.1
+group=tech.alexnijjar.extractinator
 
-fabric_loader_version=0.14.18
-fabric_api_version=0.76.0
-forge_version=45.0.25
-parchment_version=2023.03.12
+minecraftVersion=1.19.4
 
-modmenu_version=6.1.0-rc.4
-jei_version=12.4.0.22
-rei_version=11.0.597
-emi_version=0.7.2
+resourcefulLibVersion=1.3.6
+resourcefulConfigVersion=1.2.0
 
-resourcefullib_version=1.3.1
-resourcefulconfig_version=1.2.0
+reiVersion=11.0.673
+jeiVersion=13.1.0.16
