--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,16 +1,16 @@
 modLoader = "javafml"
 loaderVersion = "[45,)"
 license = "MIT"
-issueTrackerURL = "https://github.com/AlexNijjar/${github_name}/issues"
+issueTrackerURL = "https://github.com/alexnijjar/extractinator/issues"
 
 [[mods]]
 modId = "extractinator"
 version = "${version}"
 displayName = "Extractinator"
-displayURL = "https://www.curseforge.com/minecraft/mc-mods/extractinator"
+displayURL = "https://modrinth.com/mod/extractinator"
 logoFile = "icon.png"
-authors = "Alex Nijjar, Kekie6"
-credits = ""
+authors = "Alex Nijjar"
+credits = "Kekie6"
 description = "Convert blocks into resources."
 
 [[dependencies.extractinator]]
@@ -23,20 +23,20 @@ side = "BOTH"
 [[dependencies.extractinator]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19,)"
+versionRange = "[1.19.4,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.extractinator]]
 modId = "resourcefullib"
 mandatory = true
-versionRange = "[${resourcefullib_version},)"
+versionRange = "[1.3.6,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.extractinator]]
 modId = "resourcefulconfig"
 mandatory = true
-versionRange = "[${resourcefulconfig_version},)"
+versionRange = "[1.2.0,)"
 ordering = "NONE"
 side = "BOTH"
